# base

./: .gitignore  CMakeLists.txt  CONFIG_README.md  EVENT_DRIVEN_IMPLEMENTATION_COMPLETE.md  LOGGER_README.md  PERFORMANCE_ANALYSIS.md  PROJECT_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  build.sh  conanfile.py  performance_runner.sh  test_cli.sh  test_cli_complete.sh  test_event_driven.cpp  test_examples.sh
benchmarks/: CMakeLists.txt  README.md  application_benchmark.cpp  benchmark_adapter.h  benchmark_adapter_example.cpp  benchmark_runner.cpp  memory_example.cpp  run_performance_tests.sh  run_table_benchmark.sh  simple_benchmark.cpp  table_benchmark.cpp
docs/: APPLICATION_README.md  Application.md  Benchmark-Infrastructure.md  Benchmarks.md  CLI.md  CLI_README.md  CONFIG_README.md  Component-Logging.md  ComponentLogger-AutomaticPrepending.md  Configuration.md  Daemonization.md  EVENT_DRIVEN_README.md  Examples.md  Logger-Cleanup-Summary.md  Logging.md  MESSAGING_README.md  Messaging.md  PERFORMANCE_IMPROVEMENTS.md  Performance.md  README.md  Table-Performance.md  Tables-API.md  Tables-BestPractices.md  Tables-Examples.md  Tables-Iterator-Examples.md  Tables-Iterators.md  Tables-Performance.md  Tables-Persistence.md  Tables-Queries.md  Tables-QuickStart.md  Tables-Schema.md  Tables-Transactions.md  Tables.md
examples/: CLI_CONSOLIDATION_README.md  CMakeLists.txt  README.md  app_example.cpp  app_example_2.cpp  application_example.cpp  benchmark_runner.cpp  cli_args_example.cpp  cli_comprehensive_test.cpp  cli_example.cpp  cli_unit_tests.cpp  color_test.cpp  component_demo.toml  component_demo_selective.toml  component_logger_test.cpp  component_logging_example.cpp  config_example.cpp  convenience_test.cpp  daemon_example.cpp  debug_component_test.cpp  example_app.toml  logger_config_demo.cpp  messaging_example.cpp  minimal_test.cpp  performance_benchmark.cpp  priority_demo.cpp  runtime_filter_test.cpp  simple_component_test.cpp  simple_daemon_test.cpp  simple_performance_test.cpp  simple_task_example.cpp  table_dump_example.cpp  table_example.cpp  threaded_component_example.cpp  ultra_simple_example.cpp
include/: application.h  cli.h  config.h  logger.h  messaging.h  singleton.h  tables.h  thread_messaging.h
src/: application.cpp  cli.cpp  config.cpp  logger.cpp  logger_config_demo.cpp  messaging.cpp  tables.cpp
test_package/: CMakeLists.txt  README.md  conanfile.py
test_package/src/: example.cpp
tests/: CMakeLists.txt  cli_unit_tests.cpp  test_application.cpp  test_cli.cpp  test_config.cpp  test_logger.cpp  test_messaging.cpp  test_singleton.cpp  test_tables.cpp
